# nordic_examples

./: .gitmodules
000_lte_template/src/: main.c
001_hello_world/: CMakeLists.txt  README.md
001_hello_world/src/: main.c
002_lte_getaddr/: CMakeLists.txt
002_lte_getaddr/src/: main.c
002_lte_ping/src/: main.c
003_lte_ping/: README.md
003_lte_ping/src/: main.c
003_lte_time/: CMakeLists.txt  README.md  prj.conf
003_lte_time/src/: main.c
004_gnss/: CMakeLists.txt  prj.conf
004_gnss/src/: main.c
005_lte_mqtt/: CMakeLists.txt  README.md  prj.conf
005_lte_mqtt/src/: main.c
006_gnss_nrid/: CMakeLists.txt  README.md
006_gnss_nrid/src/: main.c  uav.c  uav.h
007_uart_mavlink/: CMakeLists.txt  README.md  prj.conf
007_uart_mavlink/boards/: thingy91x_nrf9151_ns.overlay
007_uart_mavlink/src/: main.c
008_gnss_brid/: CMakeLists.txt  README.md  prj.conf
008_gnss_brid/boards/: thingy91x_nrf9151_ns.overlay
008_gnss_brid/nrf5340/: CMakeLists.txt  Kconfig.sysbuild  prj.conf
008_gnss_brid/nrf5340/boards/: thingy91x_nrf5340_cpuapp.overlay
008_gnss_brid/nrf5340/src/: main.c
008_gnss_brid/src/: brid_tx.c  brid_tx.h  main.c  uav.c  uav.h
009_segger_rtt/: CMakeLists.txt  README.md  prj.conf
009_segger_rtt/src/: main.c
